# MemoryDungeon

./: .gitignore  README.md
C-deprecated/MemoryGame47/: MemoryGame47.sdf  MemoryGame47.sln
C-deprecated/MemoryGame47/MemoryGame47/: AssemblyInfo.cpp  FinderForm.cpp  FinderForm.resx  Form1.h  Form1.resX  Form2.h  Form2.resx  HeroForm.h  MemoryGame47.vcxproj  MemoryGame47.vcxproj.filters  MessageForm.h  MessageForm.resx  SetForm.h  ShopForm.cpp  ShopForm.h  ShopForm.resx  stdafx.cpp  userlogin.h
C-deprecated/gamerules/: gamerules.sdf  gamerules.sln
C-deprecated/gamerules/gamerules/: ReadMe.txt  gamerules.h  gamerules.vcxproj  row.cpp  row.h  userlogin.cpp
C/MemoryGame47/MemoryGame47/: FinderForm.h  HeroForm.cpp  HeroForm.resx  MemoryGame47.cpp  MessageForm.cpp  ReadMe.txt  SetForm.cpp  SetForm.resx
C/gamerules/gamerules/: gamerules.cpp  gamerules.vcxproj.filters
Demo/C/: MemoryGame47.exe.metagen
Godot/: icon.svg.import  project.godot
Godot/images/cards/: -2.png.import  -3.png.import  -4.png.import  -5.png.import  -6.png.import  -7.png.import  0.png.import  1.png.import  10.png.import  11.png.import  12.png.import  13.png.import  14.png.import  15.png.import  16.png.import  17.png.import  18.png.import  (+12 more)
Godot/musics/: bgm.mp3.import  break.mp3.import  card_cover.mp3.import  card_draw.mp3.import  card_flip.mp3.import  card_remove.mp3.import  chaos.mp3.import  gain_gold.mp3.import  hero_hover.mp3.import  lose.mp3.import  lucky_draw.mp3.import  notification_error.mp3.import  notification_ok.mp3.import  positive_sp_cards.mp3.import  unlucky_draw.mp3.import  win.mp3.import
Godot/scenes/: BlurContainer.tscn  Board.tscn  CardInDraw.tscn  CardInPlay.tscn  CardInShow.tscn  CollectionWindowGUI.tscn  GUI.tscn  HeroWindowGUI.tscn  JumpWindowGUI.tscn  LoadScreen.tscn  Login.tscn  Main.tscn  MainGUI.tscn  MessageWindow.tscn  MessageWindowGUI.tscn  ShopWindowGUI.tscn  SoundControlSidebar.tscn  SoundEffect.tscn  WrapperWindow.tscn
Godot/scripts/: CardInPlay.gd  CardRule.gd  GameRule.gd  Global.gd  RowRule.gd  User.gd
Godot/shaders/: Blur.gdshader
Qt/MemoryDungeon/: CMakeLists.txt
Qt/MemoryDungeon/resources/: icon.rc
Qt/MemoryDungeon/resources/images/: images.qrc
Qt/MemoryDungeon/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qt/MemoryDungeon/src/gamerules/: gamerule.cpp  gamerule.h  row.cpp  row.h
Qt/MemoryDungeon/src/users/: user.cpp  user.h
Qt/MemoryDungeon/src/widgets/: clickablelabel.cpp  clickablelabel.h  clickableprogressbar.cpp  clickableprogressbar.h  collectiondialog.cpp  collectiondialog.h  collectiondialog.ui  herodialog.cpp  herodialog.h  herodialog.ui  hoverpushbutton.cpp  hoverpushbutton.h  jumpdialog.cpp  jumpdialog.h  jumpdialog.ui  messagedialog.cpp  messagedialog.h  messagedialog.ui  shopdialog.cpp  shopdialog.h  shopdialog.ui  userlogindialog.cpp  userlogindialog.h  userlogindialog.ui
memorydungeon-react/: package.json
memorydungeon-react/public/: index.html
memorydungeon-react/src/: index.js  routes.js
miscellaneous/convert_gif_to_sprite_frames/: converter.py
(+68 files in other folders)
